# openvdb

./: CMakeLists.txt  RE-LICENSE_NOTE.txt
.github/workflows/: build.yml  docs.yml  nanovdb.yml
ci/: build_houdini.sh  install_windows.sh  install_windows_cuda.ps1
cmake/: FindBlosc.cmake
mytest/: CMakeLists.txt  error  main.cc
nanovdb/nanovdb/: CMakeLists.txt
nanovdb/nanovdb/cmd/: CMakeLists.txt  updateFiles.py
nanovdb/nanovdb/unittest/: CMakeLists.txt  TestNanoVDB.cu  TestOpenVDB.cc
nanovdb/nanovdb/util/: CreateNanoGrid.h
nanovdb/nanovdb/util/cuda/: CudaPointsToGrid.cuh
openvdb/openvdb/math/: Math.h  Vec3.h
openvdb/openvdb/tools/: FastSweeping.h
openvdb/openvdb/unittest/: TestGrid.cc  TestMath.cc  TestTools.cc  TestTree.cc  TestVolumeToSpheres.cc
openvdb_cmd/: CMakeLists.txt
openvdb_cmd/vdb_tool/: CMakeLists.txt
openvdb_examples/vdb_example_fluids/: FlipExample.h  SmokeExample.h  docs.md  main.cc
openvdb_houdini/: CMakeLists.txt  SOP_OpenVDB_Extrapolate.cc
openvdb_houdini/openvdb_houdini/: CMakeLists.txt  SOP_OpenVDB_Extrapolate.cc
openvdb_python/openvdb_python/: CMakeLists.txt  pyOpenVDBModule.cc
pendingchanges/: half_grid_support.txt  nanovdb.txt  test.txt  windows_ci_static.md
tsc/meetings/: 2023-05-23.md
